2005-07-25  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_subtype.py:
	* tests/testhelpermodule.c: (test_type_get_type),
	(_wrap_get_unknown), (_wrap_test_g_object_new), (inittesthelper):
	Clean up tests, we don't need a C binding to access tp_basicsize,
	clean up the C tests, quite a bit aswell.

2005-07-22  Johan Dahlin  <johan@gnome.org>

	* gtk/Makefile.am:
	* gtk/gtk-fake-win32.c:
	* gtk/gtk.override:
	* setup.py:

	GtkPlug & GtkSocket is now available on win32, so remove hacks.

2005-07-22  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== PyGTK 2.7.1 ===
2005-07-22  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: 
	* README: 
	* configure.in: Update requirements

	* tests/test_radiobutton.py (RadioToolButtonTest): Re-enable

	* tests/test_dialog.py (MessageDialogTest.testSubclass): Add tests, for
	#311226.

2005-07-22  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygobject.c (pygobjectmeta_register): Don't
	automatically register gtype if neither one of __gtype_name__,
	__properties__, or __gsignals__ is defined in the class
	dictionary.  Fixes #311226.

2005-07-17  Johan Dahlin  <johan@gnome.org>

	* gobject/pygobject.c: (pygobject_new_full), (pygobject_dealloc),
	(pygobject_clear):
	* gtk/gdk.override:
	* gtk/gtk-types.c: (_pygtk_style_helper_new),
	(pygtk_style_helper_dealloc), (pygtk_style_helper_setitem),
	(pygtk_tree_model_row_dealloc),
	(pygtk_tree_model_row_iter_dealloc):
	* gtk/gtk.override:
	* gtk/gtkwidget.override:
	We have atomic ref counting in glib now, remove block/unblocking
	around reference counting.	

	* gobject/pygobject.h: 
	* gobject/gobjectmodule.c (pyg_gil_state_ensure_py23) 
	(pyg_gil_state_release_py23): Remove pre python 2.3.5 compatibility.
	Simplifies thread handling.
	
	* configure.in: Require glib/gtk+ 2.7.3

	* gtk/gtk.defs (get_model, set_do_overwrite_confirmation) 
	(get_do_overwrite_confirmation, queue_resize, get_visible_range): Add
