@@ -1,3 +1,9 @@
+2005-07-30  Johan Dahlin  <jdahlin@async.com.br>
+
+	* Makefile.am:
+	* gtk/Makefile.am:
+	Install defs files conditionally, fixes #312037
+
 2005-07-25  Johan Dahlin  <jdahlin@async.com.br>
 
 	* tests/test_subtype.py:
